feat: move people into alumni

--- a/index.html
+++ b/index.html
@@ -393,7 +393,8 @@
               <h3> 2022 </h3>
               <p>Hiransuthikul A, Rattananupong T, Phusuwan W, Chunharas C, Apornpong T, Lohsoonthorn V, Avihingsanon A.
                 <b>Clusters of Cognitive Performance among Aging People Living with HIV: the Application of Unsupervised
-                  Machine Learning</b> (P13-3.001). Neurology 98 (18 Supplement)</p>
+                  Machine Learning</b> (P13-3.001). Neurology 98 (18 Supplement)
+              </p>
               <div class="portfolio-links">
                 <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=Xo-8O_UAAAAJ&sortby=pubdate&citation_for_view=Xo-8O_UAAAAJ:hFOr9nPyWt4C"
                   title="More Details"><i class="bx bx-link"></i></a>
@@ -564,7 +565,8 @@
               <h3> 2019 </h3>
               <p> Kwankajonwong N, Ongprakobkul C, Qureshi SP, Watanatada P, Thanprasertsuk S, Bongsebandhu-phubhakdi S.
                 <b>Attitude, but not self-evaluated knowledge, correlates with academic performance in physiology in
-                  Thai medical students.</b> Adv Physiol Educ. 2019 Sep 1;43(3):324-331.</p>
+                  Thai medical students.</b> Adv Physiol Educ. 2019 Sep 1;43(3):324-331.
+              </p>
               <div class="portfolio-links">
                 <a href="https://pubmed.ncbi.nlm.nih.gov/31305154/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -899,18 +901,10 @@
             <h4>Neurologist</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item" data-aos="fade-up">
-            <img src="assets/img/testimonials/AI.jpg" class="testimonial-img" alt="">
-            <h3>Aisawan Petlorlian</h3>
-            <h4>Geriatrician</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Google, my bro.
+              Anthipa Choksuwattanasakul is a neurologist with research interests in cognitive neurology and brain
+              structural changes in aging and neurodegenerative conditions. Her work focuses on how hypoxia, sleep
+              disorders, and neurological diseases affect cortical thickness, white matter integrity, and cognitive
+              performance.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -971,21 +965,6 @@
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               For everyone who’s reading this. I’m Tok (originally came from Kaitok), a person who might have already
               broke his career path.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item" data-aos="fade-up">
-            <img src="assets/img/testimonials/Kratai.jpg" class="testimonial-img" alt="">
-            <h3>Natrada Rattanapong</h3>
-            <h4>Psychologist</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Hi, here is Natrada, but everyone around me calls me Kratai. I graduated with a Bachelor’s degree in
-              Clinical Psychology from Kasetsart University and I am now working as a psychology research assistant. In
-              this lab, I have got a great opportunity to practice neuropsychology, such as memory, attention, and
-              language, which I am passionate about. And I also love going out to find a tasty cup of coffee every
-              single day.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -1093,17 +1072,6 @@
             </p>
           </div>
 
-          <div class="testimonial-item" data-aos="fade-up">
-            <img src="assets/img/testimonials/Petch.png" class="testimonial-img" alt="">
-            <h3>Kasidit "Petchy" Pintanon</h3>
-            <h4>Lab runner</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Give me the money!
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
           <!-- WE can add more below  -->
 
 
@@ -1122,6 +1090,44 @@
 
 
         <div class="owl-carousel testimonials-carousel">
+
+          <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
+            <img src="assets/img/testimonials/Kratai.jpg" class="testimonial-img" class="testimonial-img" alt="">
+            <h3>Natrada Rattanapong </h3>
+            <h4>Psychologist</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Hi, here is Natrada, but everyone around me calls me Kratai. I graduated with a Bachelor’s degree in
+              Clinical Psychology from Kasetsart University and I am now working as a psychology research assistant. In
+              this lab, I have got a great opportunity to practice neuropsychology, such as memory, attention, and
+              language, which I am passionate about. And I also love going out to find a tasty cup of coffee every
+              single day.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+
+          <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
+            <img src="assets/img/testimonials/Petch.png" class="testimonial-img" class="testimonial-img" alt="">
+            <h3>Kasidit "Petchy" Pintanon </h3>
+            <h4>Lab runner</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Give me the money!
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+
+          <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
+            <img src="assets/img/testimonials/AI.jpg" class="testimonial-img" class="testimonial-img" alt="">
+            <h3>Aisawan Petlorlian </h3>
+            <h4>Geriatrician</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Google, my bro.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+
           <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
             <img src="assets/img/testimonials/ik.jpeg" class="testimonial-img" alt="">
             <h3>Kanyarat Bonita Benjasupawan </h3>
