feat: update position

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/Tok.jpg" class="testimonial-img" alt="">
             <h3>Thiti Chainiyom</h3>
-            <h4>Project Manager</h4>
+            <h4>Lab Manager</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               For everyone who’s reading this. I’m Tok (originally came from Kaitok), a person who might have already
@@ -972,7 +972,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/joe-rama.png" class="testimonial-img" alt="">
             <h3>Setthanan Jarukasemkit</h3>
-            <h4>Medical student</h4>
+            <h4>Physician-Scientist</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Hi stealthy reader! I’m Joe, a medical student who dreams of being a neuropsychiatrist before thirty years
@@ -990,7 +990,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/tan.jpg" class="testimonial-img" alt="">
             <h3>Kanathip Jongmekwamsuk</h3>
-            <h4>Medical student</h4>
+            <h4>Physician-Scientist</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Kanathip is a medical student who is fascinated by the cognitive neuroscience of language and learning. He
@@ -1007,7 +1007,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/prin.jpg" class="testimonial-img" alt="">
             <h3>Naphapa Panyanirun</h3>
-            <h4>Medical student</h4>
+            <h4>Physician-Scientist</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Hello, I’m Naphapa (Prinn). I’m currently a (pseudo)medical student at Chulalongkorn University. My
@@ -1022,7 +1022,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/pun.jpg" class="testimonial-img" alt="">
             <h3>Chattarin Poungtubtim</h3>
-            <h4>Medical student</h4>
+            <h4>Neuroscientist and PhD candidates</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               A 5th-year medical student at KMCH. He presented with a lack of energy and motivation during his clinical
@@ -1044,7 +1044,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/Bank.jpg" class="testimonial-img" alt="">
             <h3>Nithit Singtokum</h3>
-            <h4>Medical student</h4>
+            <h4>Physician-Scientist</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Hi, I'm Bank. I'm currently a 6th-year medical student at Chulalongkorn university. I’m passionate about
