fix: spelling error

--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
           <div class="testimonial-item" data-aos="fade-up">
             <img src="assets/img/testimonials/pun.jpg" class="testimonial-img" alt="">
             <h3>Chattarin Poungtubtim</h3>
-            <h4>Neuroscientist and PhD candidates</h4>
+            <h4>Neuroscientist and PhD candidate</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               A 5th-year medical student at KMCH. He presented with a lack of energy and motivation during his clinical
