feat: first draft

--- a/index.html
+++ b/index.html
@@ -376,14 +376,90 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cogn">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-clin filter-neuro">
             <div class="portfolio-wrap">
-              <h3> 2022 </h3>
-              <p>Chapman A, Chunharas C, Störmer VS. <b>Optimal tuning of feature-based attention warps the perception
-                  of visual features.</b> PsyArXiv</p>
+              <h3>2025</h3>
+              <p>S Jarukasemkit, KM Tam, S Yoadsanit, T Easley, H Modi, L Stahl, A
+                Kampaengtip, T Chansakul, R Janamnuaysook, A Hiransuthikul, C Chunharas, JD
+                Bijsterbosch
+                <b>Depression and the prefrontal-hippocampal pathway—A multimodal neuroimaging study in transgender
+                  women.</b>
+                Comprehensive Psychoneuroendocrinology 22, 100288
+              </p>
               <div class="portfolio-links">
-                <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=Xo-8O_UAAAAJ&sortby=pubdate&citation_for_view=Xo-8O_UAAAAJ:mB3voiENLucC"
-                  title="More Details"><i class="bx bx-link"></i></a>
+                <a href="*" title="More Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-clin filter-neuro">
+            <div class="portfolio-wrap">
+              <h3>2024</h3>
+              <p>P Thanapornsangsuth, K Booncharoen, J Khieukhajee, W Luechaipanit,
+                T Haethaisong, A Chongsuksantikul, T Supharatpariyakorn, C Chunharas, Y
+                L, T Hemachudha
+                <b>The Bayesian approach for real‐world implementation of plasma p‐tau217 in tertiary care memory
+                  clinics in Thailand.</b>
+                Alzheimer's & Dementia 20 (9), 6456–6467
+              </p>
+              <div class="portfolio-links">
+                <a href="*" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cogn filter-neuro">
+            <div class="portfolio-wrap">
+              <h3>2024</h3>
+              <p>P Sookprao, K Benjasupawan, T Phangwiwat, I Chatnuntawech, ...
+                <b>Conflicting sensory information sharpens the neural representations of early selective visuospatial
+                  attention.</b>
+                Journal of Neuroscience 44 (33)
+              </p>
+              <div class="portfolio-links">
+                <a href="*" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cogn filter-neuro">
+            <div class="portfolio-wrap">
+              <h3>2024</h3>
+              <p>T Phangwiwat, P Phunchongharn, Y Wongsawat, I Chatnuntawech, ...
+                <b>Sustained attention operates via dissociable neural mechanisms across different eccentric
+                  locations.</b>
+                Scientific Reports 14 (1), 11188
+              </p>
+              <div class="portfolio-links">
+                <a href="*" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-comp filter-clin">
+            <div class="portfolio-wrap">
+              <h3>2023</h3>
+              <p>R Raksasat, S Teerapittayanon, S Itthipuripat, K Praditpornsilpa, ...
+                <b>Attentive pairwise interaction network for AI-assisted clock drawing test assessment of early
+                  visuospatial deficits.</b>
+                Scientific Reports 13 (1), 18113
+              </p>
+              <div class="portfolio-links">
+                <a href="*" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cogn filter-comp">
+            <div class="portfolio-wrap">
+              <h3>2023</h3>
+              <p>AF Chapman, C Chunharas, VS Störmer
+                <b>Feature-based attention warps the perception of visual features.</b>
+                Scientific Reports 13 (1), 6487
+              </p>
+              <div class="portfolio-links">
+                <a href="*" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
