feat: summarized old about us

--- a/index.html
+++ b/index.html
@@ -124,111 +124,59 @@
             <div class="icon-boxes d-flex flex-column justify-content-center">
               <div class="row news-container">
 
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <i class="bx bx-bulb"></i>
-                  <h4>July 2022</h4>
-                  <p>@Setthanan (Joe) was selected as the top 8 final candidates for the Prince Mahidol Award Youth
-                    Program</p>
-                  <p>“An Explainable Self-Attention Deep Neural Network for Detecting Mild Cognitive Impairment Using
-                    Multi-input Digital Drawing Tasks” paper is accepted in Alzheimer’s Research and Therapy</p>
-                  <p>@Jaja, @Joe, and @Arb presented their special research projects and the presentations were
-                    awesome!!! Kudos to you all!!</p>
-                  <p>@Guy participated in an official Neuropsychology training. Way to go!</p>
-                  <p>@Sirawaj did an interview on BCI at The Standard. Super cool!</p>
+                <div class="col-md-12 icon-box">
+                  <i class="bx bx-data"></i>
+                  <h4>2024 </h4>
+                  <p>
+                  <p>
+                    In 2024,
+                  </p>
+                  </p>
                 </div>
 
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bx bx-briefcase"></i>
-                  <h4>June 2022</h4>
-                  <p>@Angle was interviewed and selected to visit CERN, Switzerland, she got a chance to be close to the
-                    large hedron collider, almost get lost during her boat trip but found her way back!</p>
-                  <p>@Fah joined the lab as a psychologist </p>
-                  <p>@Ik, @pop, @numking, @Pun, @Tan, @Prinn, @Arb, @Joe,@Pete, @Sirawaj, and @CC submitted their works
-                    to SfN</p>
-                  <p>@Mos, @Pun started our own Neuromatch academy: Comp. Neuro slow pod</p>
-                </div>
-
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-calendar"></i>
-                  <h4>May 2022</h4>
-                  <p>@Angel was awarded for High School Visit Program at CERN</p>
-                  <p>@Ik gave an oral presentation at VSS on… </p>
-                  <p>@Pop and @Sirawaj gave a poster presentation at VSS on…. </p>
-                  <p>@Ik, @Pop, @Sirawaj went to Disney World and Universal Studios to… :))</p>
-                  <p>@CC did a podcast interview at WiTcast on women who can taste and see when they hear things. Very
-                    interesting.</p>
-                </div>
-
-                <div class="col-md-6 icon-box">
+                <div class="col-md-12 icon-box">
                   <i class="bx bx-brain"></i>
-                  <h4>April 2022</h4>
-                  <p>“An adaptive perspective on visual working memory distortions” was accepted in the Journal of
-                    Experimental Psychology!!</p>
-                  <P>@Prinn, @Pun, @Tan; Awesome Medical students Trio joined the lab. </P>
+                  <h4>2023 </h4>
+                  <p>
+                  <p>
+                    In 2023,
+                  </p>
+                  </p>
                 </div>
 
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-capsule"></i>
-                  <h4>March 2022</h4>
-                  <p>@Ik has been awarded a 2022 Travel Grant to help support the costs of attending the 2022 Vision
-                    Sciences Society Meeting.</p>
-                </div>
-
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-bot"></i>
-                  <h4>February 2022</h4>
-                  <p>@Ik and @Pop’s work on “The reduced fidelity of selective sensory information processing in the
-                    elderly with mild cognitive impairment” have been accepted as an in-person Talk presentation at the
-                    2022 VSS Annual Meeting in St. Pete Beach, Florida</p>
-                </div>
-
-                <div class="col-md-6 icon-box">
+                <div class="col-md-12 icon-box">
                   <i class="bx bx-bulb"></i>
-                  <h4>January 2022</h4>
-                  <p>We and @ajMy from Mahidol did a public Neuroscience X Art reach out name “ศิลประสาท”</p>
+                  <h4>2022 </h4>
+                  <p>
+                    In 2022, CCCN Lab saw many exciting milestones. Joe was selected as a finalist for the Prince
+                    Mahidol Award Youth Program, while two major papers were accepted in Alzheimer’s Research &
+                    Therapy and the Journal of Experimental Psychology. Members presented at VSS and SfN,
+                    with Ik, Pop, and Sirawaj giving talks and posters. The lab launched its own Neuromatch pod and
+                    participated in public outreach like “ศิลประสาท” and a WiTcast podcast. Angel and Angle received
+                    awards to visit CERN. We welcomed new members including Fah, Prinn, Pun, and Tan. The year was
+                    filled with achievements in research, collaboration, and science communication.
+                  </p>
                 </div>
 
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-briefcase"></i>
-                  <h4>December 2020</h4>
-                  <p>@Gann, @Praew, @Guy, @Kate and @Tok joined the lab. Welcome, Psycho5! </p>
-                </div>
-
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-calendar"></i>
-                  <h4> November 2020 </h4>
-                  <p> @Poonakarn impressed his research committee with his awesome research proposal. He also wrote an
-                    article on AI in medicine. </p>
-                  <p> @Natchawan and @Akarin submitted their scientific abstracts to American Academy of Neurology. </p>
-                  <p> @Sattarin gave a progress report presentation at the DSPT meeting.</p>
-                  <p> BIG Congrats to @Siwaraj for winning the Young Investigator Award 2020 from KMUTT. Very
-                    well-deserved! :)) </p>
-                </div>
-
-                <div class="col-md-6 icon-box">
-                  <i class="bx bx-brain"></i>
-                  <h4> October 2020 </h4>
-                  <p> @Anthipa paper studied 'Hypoxia in OSA' and 'Cognition' was accepted in Sleep & Breathing. Big
-                    congrats, Pim! </p>
-                  <p> @Sekh gave a special lecture titled : “Cortical Language Pathway and Primary Progressive Aphasia
-                    Syndrome”. </p>
-                  <p> @Tanupat joined the team. Welcome, Tung! </p>
-                </div>
-
-                <div class="col-md-6 icon-box">
+                <div class="col-md-12 icon-box">
                   <i class="bx bx-capsule"></i>
-                  <h4> September 2020 </h4>
-                  <p> @CCCN received a grant to study cognitive impairment in elderly. We settled down at Chula
-                    Neuroscience Center and brought in more plants! :) </p>
-                  <p> @CCCN is excited to be a part of the AI for Health project by University Technology center.
-                    @Prasit and @Nithiroj joined the gang! Welcome, P and P’Lek. </p>
+                  <h4>2021</h4>
+                  <p>
+                    In 2021, 
+                  </p>
                 </div>
 
-                <div class="col-md-6 icon-box">
+                <div class="col-md-12 icon-box">
                   <i class="bx bx-bot"></i>
-                  <h4> August 2020 </h4>
-                  <p>Sattarin got the best presentation award from DSPT progress report meeting. Way to go, Kong! </p>
-                  <p>@Waragon and @Kanokporn joined the lab. Welcome, Mos and Yuki! </p>
+                  <h4>2020 </h4>
+                  <p>
+                    In 2020, CCCN Lab welcomed many new members including Mos, Yuki, Tung, Psycho5 (Gann, Praew, Guy,
+                    Kate, Tok), and the AI team (P & P’Lek). Notable achievements include Pim’s publication in Sleep
+                    & Breathing, Siwaraj’s Young Investigator Award (KMUTT), and Sattarin’s DSPT Best
+                    Presentation. Poonakarn published on AI in medicine; Natchawan and Akarin submitted to AAN; Sekh
+                    gave a lecture on language and aphasia. The lab received a grant on elderly cognition, joined the AI
+                    for Health initiative, and settled into Chula Neuroscience Center.
+                  </p>
                 </div>
               </div>
             </div>
