--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,19 @@
             </p>
           </div>
 
+          <div class="testimonial-item" data-aos="fade-up">
+            <img src="assets/img/testimonials/SST_crop.png" class="testimonial-img" alt="">
+            <h3>Sasin “James” Treeratana</h3>
+            <h4>Physician-Scientist</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              Hi, I’m James. I graduated with my M.D. from Siriraj Hospital in 2025. During medical school, I developed a strong interest in mapping neuropsychiatric disorders deemed “non-localizable.” I believe our conventional brain atlas is outdated and due for revision. My current focus is on using fMRI analysis techniques to uncover large-scale brain networks affected by these disorders, rather than attributing symptoms to localized lesions.
+              <br>
+              Outside of work, I enjoy playing classical piano—especially Chopin—rock climbing, and making espresso.
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+
           <!-- WE can add more below  -->
 
 
